--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="css/index.css">
     <head>
         <h1>Selamat Datang!</h1>
     </head>
@@ -9,11 +9,12 @@
                 <a href="form.html">Daftar Disini</a>
             </div>
             <div class="slide slide-2">
-                <img src="src/img2.png" alt="image2" width="250" h>
+                <img src="src/img2.png" alt="image2" width="250"><br>
+                <a href="landingdom.html">Landing Page</a>
             </div>
             <button class="prev">Prev</button>
             <button class="next">Next</button>
-            <script src="carousel.js"></script>
+            <script src="js/carousel.js"></script>
         </div>
         <footer>
             <p>Tugas FSWD 2 Javascript 2024</p>
