--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,12 @@
     <head>
         <h1>Selamat Datang!</h1>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     </head>
+    <body>
+        <!-- Tombol login ditempatkan di pojok kanan atas -->
+        <button class="login-button" onclick="window.location.href='login.html'">Login</button>
         <div class="carousel">
             <div class="slide slide-1 active">
                 <img src="../src/img1.png" alt="image1" width="500" height="auto"><br><br>
@@ -22,5 +25,5 @@
         <footer>
             <p>Tugas FSWD 2 Javascript 2024</p>
         </footer>
-        
+    </body>
 </html>
